Remove invalid Arquillian deployment processors. Remove external modules dependency on junit Add more logging to the ArquillianService Upgrade to surefire-8.2.1